# gr-opencv

./: CMakeLists.txt  MANIFEST.md
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-opencvConfig.cmake
docs/: CMakeLists.txt  README.opencv
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox
grc/: CMakeLists.txt  opencv_aruco_detector.block.yml  opencv_video_sink.block.yml  opencv_video_source.block.yml
include/gnuradio/opencv/: CMakeLists.txt  api.h
lib/: CMakeLists.txt
python/opencv/: CMakeLists.txt  __init__.py  aruco_detector.py  video_sink.py  video_source.py
python/opencv/bindings/: CMakeLists.txt  python_bindings.cc
